feat(server): collect public registration names
